Mon Jul 14 12:48:54 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Added an entry for my change from Mon Jul  7 12:09:10 UTC 2008.

Fri Jul 11 16:35:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/server_main.cpp:
        * tests/Abstract_Interface/client.cpp:
        * tests/Hang_Shutdown/server.cpp:
        * tests/Portable_Interceptors/AMI/client.cpp:
        * tests/POA/Persistent_ID/server.cpp:
        * tests/Object_Loader/Loader.h:
        * tests/Object_Loader/Loader.cpp:
        * tests/Oneway_Timeouts/server.cpp:
        * tests/POA/EndpointPolicy/server.cpp:
        * tests/POA/EndpointPolicy/client.cpp:
        * tests/POA/Default_Servant2/server.cpp:
        * tests/POA/Default_Servant2/client.cpp:

          Added/Corrected wide-character compatablity.

Fri Jul 11 11:20:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/ORB_Local_Config/Two_DLL_ORB/server.cpp:
        * utils/catior/catior.cpp:

          Missing bracket and missnamed argcw & argvw.

Fri Jul 11 08:00:25 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * TAO_IDL/include/fe_extern.h:

          Fixed a compile error on versioned namespace builds.

Fri Jul 11 07:28:12 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * TAO_IDL/util/utl_global.cpp:

          Removed comment about Prism addition which slipped in during
          my previous commit.

Thu Jul 10 15:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Client_Leaks/client.cpp:
        * tests/Transport_Current/IIOP/server.cpp:
        * tests/Transport_Current/IIOP/IIOP_Tester.cpp:
        * tests/Transport_Current/IIOP/IIOP_Server_Request_Interceptor.cpp:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/server_main.cpp:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Server_Task.h: